--- a/app.json
+++ b/app.json
@@ -43,9 +43,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "8f63b262-7025-4783-b50c-338e275ce5fa"
+        "projectId": "d991fc17-c288-448c-96f5-d03a119569b6"
       }
     },
-    "owner": "mereniskender"
+    "owner": "magneticpurple"
   }
 }
